--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rg-react-redux",
-  "version": "2.0.0",
+  "version": "1.1.0",
   "main": "src/frontend/app.js",
   "author": "Regina Galieva",
   "license": "MIT",
@@ -10,9 +10,9 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --env=dev --hot --inline",
-    "build:dev": "webpack --env=dev --progress --profile --colors",
-    "build:prod": "webpack --env=prod --progress --profile --colors",
-    "deploy:surge": "yarn build:prod && cd dist && mv index.html 200.html && surge ./"
+    "dev:mobile": "webpack-dev-server --env=dev --hot --inline --host 0.0.0.0",
+    "build": "webpack --env=prod --progress --profile --colors",
+    "deploy": "yarn build && cd dist && mv index.html 200.html && surge ./"
   },
   "keywords": [
     "redux",
@@ -35,19 +35,22 @@
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.2.2",
     "postcss-mixins": "^5.4.1",
-    "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.13.1",
+    "svgo-loader": "^1.2.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0",
     "webpack-merge": "^2.6.1"
   },
   "dependencies": {
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.5.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
-    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-router-redux": "next",
     "redux": "^3.6.0"
   }
 }
