--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,9 @@
 {
   "presets": [
-    ["es2015", {"modules": false}],
-    "react",
-    "stage-2"
+    "@babel/env",
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties"
   ]
 }
