--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rg-react-redux",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "main": "src/frontend/app.js",
   "author": "Regina Galieva",
   "license": "MIT",
@@ -9,10 +9,11 @@
     "type": "git"
   },
   "scripts": {
-    "dev": "webpack-dev-server --env=dev --hot --inline",
-    "dev:mobile": "webpack-dev-server --env=dev --hot --inline --host 0.0.0.0",
-    "build": "webpack --env=prod --progress --profile --colors",
-    "deploy": "yarn build && cd dist && mv index.html 200.html && surge ./"
+    "dev": "webpack-dev-server --env=development --hot --inline --progress --profile --colors",
+    "dev:mobile": "webpack-dev-server --env=development --hot --inline --host 0.0.0.0",
+    "build": "webpack --env=production --progress --profile --colors",
+    "deploy": "npm run build && cd dist && mv index.html 200.html && surge ./",
+    "lint:fix": "./node_modules/.bin/eslint . --fix"
   },
   "keywords": [
     "redux",
@@ -20,37 +21,43 @@
     "react-router-dom"
   ],
   "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^0.1.15",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "2.0.0",
-    "file-loader": "^0.10.0",
-    "html-webpack-plugin": "^2.28.0",
-    "postcss-cssnext": "^2.9.0",
-    "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.2.2",
-    "postcss-mixins": "^5.4.1",
-    "react-hot-loader": "^1.3.1",
-    "style-loader": "^0.13.1",
-    "svgo-loader": "^1.2.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0",
-    "webpack-merge": "^2.6.1"
+    "css-loader": "^1.0.0",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.2",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "svgo": "^1.0.5",
+    "svgo-loader": "^2.1.0",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.17.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "prop-types": "^15.5.8",
-    "react": "^15.5.4",
-    "react-addons-css-transition-group": "^15.5.2",
-    "react-dom": "^15.4.2",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.1.1",
-    "react-router-redux": "next",
-    "redux": "^3.6.0"
+    "redux": "^4.0.0"
   }
 }
