--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rg-react-redux",
   "version": "2.0.0",
-  "main": "src/frontend/app.js",
+  "main": "client/frontend/app.js",
   "author": "Regina Galieva",
   "license": "MIT",
   "repository": {
