--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.1.1",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-promise": "latest"
   }
 }
